--- a/sites/all/themes/george/css/style.css
+++ b/sites/all/themes/george/css/style.css
@@ -39,7 +39,7 @@ body {
   text-align: center;
   text-shadow: 0 1px 3px rgba(0,0,0,.5);
   box-shadow: inset 0 0 100px rgba(0,0,0,.5);
-  background-image: url(../images/logo_cover_circle.png);
+  /* background-image: url(../images/logo_cover_circle.png); */
   background-repeat: no-repeat;
   background-position: center center;
   overflow: hidden;
@@ -171,9 +171,14 @@ body {
 
 
 /* Custom Major Robot */
+
+#stars {
+    z-index: 10;
+}
+
 .star {
     width: 195px;
-    height: 250px;
+    height: 200px;
     /* position: relative; */
     background: url(../images/star.png) transparent center center no-repeat;
     background-size: 160px 160px;
@@ -184,16 +189,98 @@ body {
 }
 
 .star h3 {
-    position: absolute;
-   /*  top: 110px; */
-   bottom: 0px;
+position: absolute;
+   bottom: 30%;
    width: 165px;
-    color: #ffd503;
+   color: #ffd503;
     /* color: #d2232a; */
 }
 
+#main {
+	height: 750px;
+	position: relative;
+	top: 50%;
+	
+	-webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%);
+}
+
+#stars, #card-container {
+    position: absolute;
+}
+
+
+#card-container{
+    /* top: 100px; */
+}
+
+#card-parent {
+    height: 800px;
+    width: 800px;
+    margin: 0 auto;
+    perspective: 800px;
+    -webkit-perspective: 800px;
+    -moz-perspective: 800px;
+    -ms-perspective: 800px;
+    -o-perspective: 800px;
+}
+
+#card {
+    width: 100%;
+    height: 100%;
+    position: absolute;
+    
+    -webkit-transform-style: preserve-3d;
+    -moz-transform-style: preserve-3d;
+    -ms-transform-style: preserve-3d;
+    -o-transform-style: preserve-3d;
+    transform-style: preserve-3d;
+    
+    -webkit-transition: -webkit-transform 1s;
+    -moz-transition: -moz-transform 1s;
+    -ms-transition: -ms-transform 1s;
+    -o-transition: -o-transform 1s;
+    transition: transform 1s;
+}
+
+#card div{
+    display: block;
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+    -o-backface-visibility: hidden;
+    backface-visibility: hidden;
+}
+
+#card .front {
+
+}
+
+#card .back {
+    background-color: white;
+    border-radius: 400px;
+    transform: rotateY( 180deg );
+    -webkit-transform: rotateY( 180deg );
+    -moz-transform: rotateY( 180deg );
+    -ms-transform: rotateY( 180deg );
+    -o-transform: rotateY( 180deg );
+}
+#card.flipped {
+    -webkit-transform: rotateY( 180deg );
+    -moz-transform: rotateY( 180deg );
+    -ms-transform: rotateY( 180deg );
+    -o-transform:rotateY( 180deg );
+    transform: rotateY( 180deg );
+}
+
 #main .row {
-    height: 250px;
+    height: 305px;
 }
 
 #main .row-short {
@@ -203,4 +290,17 @@ body {
 .block {
     display: none;
     color: #333;
+    margin: 0 auto;
+    width: 100%;
+    text-shadow: none;
+    
+    position: absolute;
+	top: 50%;
+	
+	-webkit-transform: translateY(-50%);
+    -moz-transform: translateY(-50%);
+    -ms-transform: translateY(-50%);
+    -o-transform: translateY(-50%);
+	transform: translateY(-50%);
 }
+
